--- a/views/layout.tmpl
+++ b/views/layout.tmpl
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-      <p>Copyright Trevor Industries 2017,</p>
+      <p>Copyright Trevor Industries 2017</p>
     </footer>
   </body>
 </html>
